pref: 收掉三处历史结构导致的性能问题.